--- a/Part1.tex
+++ b/Part1.tex
@@ -96,7 +96,7 @@
 \end{comment}
 
 %**************************** Where to find images *****************************
-\graphicspath{ {D:/MathLatex/images/} }
+%\graphicspath{ {./images/} }
 
 
 %**************************** Document itself *******************************
@@ -108,7 +108,7 @@ Chapters \RomanNumeralCaps{1} to \RomanNumeralCaps{4}}
 \maketitle
 \begin{figure}%                 use [hb] only if necceccary!
   \centering
-  \includegraphics[width=10cm]{zebook.jpg}
+  \includegraphics[width=10cm]{./images/zebook.jpg}
   \caption{My copy, falling apart...}
   \label{fig:test}
 \end{figure}
